@startuml PB138 - Simplified ERD by Tabs

!pragma ratio 0.62
left to right direction
skinparam linetype ortho
hide circle
hide methods
hide stereotypes

skinparam entity {
  BorderColor #334155
  BackgroundColor #ffffff
  FontColor #0f172a
}

skinparam package {
  BorderColor #94a3b8
  FontColor #0f172a
}

skinparam note {
  BorderColor #2563eb
  BackgroundColor #eff6ff
  FontColor #1e3a8a
}

package "Datové jádro" {
  entity Subject {
    Id <<PK>>
    Name
    Teacher
    Code <<UNIQUE>>
    Archived
  }

  entity Task {
    Id <<PK>>
    SubjectId <<FK>>
    Title
    Done
  }

  entity Event {
    Id <<PK>>
    SubjectId <<FK>>
    Title
    Date
    Time
    Location
    Accent
  }

  entity FileRecord {
    Id <<PK>>
    SubjectId <<FK>>
    Name
    Category
    Shared
  }

  entity Profile {
    Id <<PK>>
    FullName
    Email
    StudyMajor
    StudyYear
  }

  entity AuditLog {
    Id <<PK>>
    SubjectId <<FK>>
    EntityType
    Action
    CreatedAt
  }

  Subject ||--o{ Task
  Subject ||--o{ Event
  Subject ||--o{ FileRecord
  Subject ||--o{ AuditLog
}

package "Home" {
  entity HomeTab {
    Key: home
  }
  note right of HomeTab
  Doporučené funkce:
  - personalizované widgety
  - dnešní přehled úkolů/událostí
  - rychlé akce (přidat úkol/událost/soubor)
  - weekly focus + priority
  end note
}

package "Kalendář" {
  entity CalendarTab {
    Key: calendar
  }
  note right of CalendarTab
  Doporučené funkce:
  - opakované události
  - připomínky
  - drag & drop termínů
  - filtrace dle předmětu
  - detekce kolizí
  end note
}

package "Předměty" {
  entity SubjectsTab {
    Key: subjects
  }
  note right of SubjectsTab
  Doporučené funkce:
  - detail předmětu (úkoly/události/soubory)
  - archivace/obnova
  - progress předmětu
  - sylabus a milníky
  end note
}

package "Soubory" {
  entity FilesTab {
    Key: files
  }
  note right of FilesTab
  Doporučené funkce:
  - verzování souborů
  - tagy + fulltext
  - náhled PDF/obrázků
  - sdílení s expirací
  end note
}

package "Profil" {
  entity ProfileTab {
    Key: profile
  }
  note right of ProfileTab
  Doporučené funkce:
  - notifikační preference
  - timezone/lokalizace
  - bezpečnost (2FA, sessions)
  - export dat
  end note
}

HomeTab ..> Task : čte
HomeTab ..> Event : čte
HomeTab ..> Subject : čte
HomeTab ..> FileRecord : čte

CalendarTab ..> Event : CRUD
CalendarTab ..> Subject : přiřazení
CalendarTab ..> AuditLog : historie

SubjectsTab ..> Subject : CRUD
SubjectsTab ..> Task : kontext
SubjectsTab ..> Event : kontext
SubjectsTab ..> FileRecord : kontext
SubjectsTab ..> AuditLog : historie

FilesTab ..> FileRecord : CRUD
FilesTab ..> Subject : vazba
FilesTab ..> AuditLog : historie

ProfileTab ..> Profile : CRUD singleton
ProfileTab ..> AuditLog : historie

note bottom
Zjednodušený ERD: méně atributů, jasné rozdělení podle záložek UI.
Plné schéma zůstává v pb138-erd-project-full.puml.
end note

@enduml
